move analysis code to another repo

--- a/vignettes/MPA_basics_microglia.Rmd
+++ b/vignettes/MPA_basics_microglia.Rmd
@@ -17,6 +17,8 @@ Load the required R libraries
 
 ```{r eval=FALSE}
 
+# conda activate hdWGCNA
+
 # load R packages
 library(Seurat)
 library(ggplot2)
